Version 4.3.0
- P2 API Change: use call/ret instead of calla/reta
- Added finer-grained control over optimizations
- Added per-function control over optimizations
- Fixed some bugs in cse and loop optimizations
- Fixed byref parameters in BASIC template functions
- Improved dead code removal

Version 4.2.8
- Added -Werror flag to turn warnings into errors
- Fixed an optimizer bug which could incorrectly delete some conditional statements
- Fixed inlining of static functions
- Made ORG force long alignment

Version 4.2.7
- Added missing waitvid builtin for P1
- Added some additional language compatibility warnings
- Better warning messages for redefining member variables
- Changed default C preprocessor mode to be GCC compatible
- Fixed some C definitions in propeller2.h
- Fixed BASIC printing of floats
- Fixed some problems with .word[N] assignments
- Fixed unnecessary jmp warning when listing file is output
- Improved heuristic for deciding between if statements and jump tables for case statements
- Optimized mul/div sequences with immediates
- Optimized jump tables on P1

Version 4.2.6
- Added sanity check for removing inlined functions (fixes an optimizer bug)
- Added __andthen__ and __orelse__ operators to Spin/Spin2.
- Fixed an optimizer bug in renaming registers
- Fixed assignments like x.byte[1] := y
- Fixed Spin AND and OR operators to evaluate both sides if they have side effects.
- Improved some error messages
- Merged improved P1 multiply/divide routines from Wuerfel21.

Version 4.2.5
- Added many more peephole optimizations
- Added -Wall flag for more warnings, including about language extensions
- Fixed the #warn preprocessor directive
- Fixed a bug in operator assignment (like +=) when both sides have side effects
- Fixed an optimizer bug where some conditional instructions were overlooked in optimizing cmp #0 cases
- Fixed a typo in TAN causing it to return bad values
- Fixed constant(@x - @y)
- Implemented _FREE and _STACK