@@ -642,3 +642,18 @@ No address may be given in an ORG/END pair. In fastspin inline assembly is run f
 The location of the clock frequency is at the standard location $10 used by TAQOZ, micropython, and most C compilers, rather than $40 as used by Spin2.
 
 COG memory is also laid out differently. fastspin leaves COG locations $0 to $1f and $1e0 to $1ef free for use by inline assembly, and does not use the LUT (except as fcache). This is in contrast to the official compiler, which leaves a large block of COG memory starting at $0 "free" (although it is occupied by inline assembly) and which uses LUT to store the interpreter code.
+
+### DEBUG statements
+
+In fastspin, `DEBUG` statements are accepted only in Spin2 methods, *not* in PASM.
+
+Debug statements are output only when the `-g` flag is given to fastspin.
+
+Only a subset of the Spin2 `DEBUG` directives are accepted:
+```
+ZSTR, UDEC, UDEC_BYTE, UDEC_WORD, UDEC_LONG, SDEC, SDEC_BYTE, SDEC_WORD, SDEC_LONG, UHEX, UHEX_BYTE, UHEX_WORD, UHEX_LONG
+```
+Other directives are ignored, with a warning.
+
+
+`DEBUG` in fastspin is implemented differently than in PNut, so timing when debug is enabled may be different.
