@@ -2,6 +2,7 @@ Version 4.3.0
 - P2 API Change: use call/ret instead of calla/reta
 - Added finer-grained control over optimizations
 - Added per-function control over optimizations
+- Added preliminary implementation of DEBUG() for Spin2
 - Fixed some bugs in cse and loop optimizations
 - Fixed byref parameters in BASIC template functions
 - Improved dead code removal
